Add checkpoint for user-define storage; Add a mini-batch resource request method to avoid many PSs are allocated on a single node